--- a/components/Nav.module.css
+++ b/components/Nav.module.css
@@ -1,6 +1,6 @@
 .nav {
   position: fixed;
-  top: 0;
+  top: var(--banner-h);
   left: 0;
   right: 0;
   z-index: 500;
